--- a/public/atendimentos-prestados.html
+++ b/public/atendimentos-prestados.html
@@ -73,6 +73,32 @@
 
     <div id="wrapper" class="clearfix">
 
+<!-- Header
+		============================================= -->
+<header id="header" class="static-sticky full-header clearfix">
+
+    <div id="header-wrap" style="color: #1CAD9C">
+
+        <div class="container-fluid clearfix">
+            
+            <!-- Logo
+						============================================= -->
+            <div id="logo">
+                <a href="index.html" class="standard-logo">
+                    <img src="demos/car/images/logo_parcelepague2.png" alt="RazeCar">
+                </a>
+                <a href="index.html" class="retina-logo">
+                    <img src="demos/car/images/logo_parcelepague4.jpg" alt="RazeCar">
+                </a>
+            </div>
+            <!-- #logo end -->
+        </div>
+
+    </div>
+
+</header>
+<!-- #header end -->
+
         <section id="content" class="clearfix">
 
             <div class="content-wrap nobottompadding" style="padding-top: 1px">
@@ -85,11 +111,28 @@
                         <!-- Portfolio Filter
 						============================================= -->
                         <ul class="portfolio-filter style-2 clearfix" data-container="#portfolio">
-                            <li><a href="#" data-filter=".cf-hatchback"><i class="icon-car-cuv"></i><span>Hatch</span></a></li>
-                            <li><a href="#" data-filter=".cf-sedan"><i class="icon-car-sedan"></i><span>Sedan</span></a></li>
-                            <li><a href="#" data-filter=".cf-cuv"><i class="icon-car-hatchback"></i><span>SUV</span></a></li>
+                            <li>
+                                <a href="#" data-filter=".cf-hatchback">
+                                    <i class="icon-car-cuv"></i>
+                                    <span>Hatch</span>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#" data-filter=".cf-sedan">
+                                    <i class="icon-car-sedan"></i>
+                                    <span>Sedan</span>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#" data-filter=".cf-cuv">
+                                    <i class="icon-car-hatchback"></i>
+                                    <span>SUV</span>
+                                </a>
+                            </li>
                             <!-- Show All Button -->
-                            <li class="fright activeFilter"><a class="button button-small button-rounded button-reset" href="#" data-filter="*">Mostrar todos</a></li>
+                            <li class="fright activeFilter">
+                                <a class="button button-small button-rounded button-reset" href="#" data-filter="*">Mostrar todos</a>
+                            </li>
                         </ul>
                         <!-- #portfolio-filter end -->
 
@@ -110,7 +153,8 @@
                                 </div>
                                 <div class="portfolio-desc">
                                     <h3>Outlander</h3>
-                                    <span>Carro recuperado de enchente, foi realizado serviço elétrico, limpeza do sistema de ar, higienização interna e limpeza do motor</span>
+                                    <span>Carro recuperado de enchente, foi realizado serviço elétrico, limpeza do sistema de ar,
+                                        higienização interna e limpeza do motor</span>
                                 </div>
                             </article>
 
@@ -123,7 +167,8 @@
                                 </div>
                                 <div class="portfolio-desc">
                                     <h3>Outlander</h3>
-                                    <span>Carro recuperado de enchente, foi realizado serviço elétrico, limpeza do sistema de ar, higienização interna e limpeza do motor</span>
+                                    <span>Carro recuperado de enchente, foi realizado serviço elétrico, limpeza do sistema de ar,
+                                        higienização interna e limpeza do motor</span>
                                 </div>
                             </article>
 
@@ -136,7 +181,8 @@
                                 </div>
                                 <div class="portfolio-desc">
                                     <h3>Outlander</h3>
-                                    <span>Carro recuperado de enchente, foi realizado serviço elétrico, limpeza do sistema de ar, higienização interna e limpeza do motor</span>
+                                    <span>Carro recuperado de enchente, foi realizado serviço elétrico, limpeza do sistema de ar,
+                                        higienização interna e limpeza do motor</span>
                                 </div>
                             </article>
 
@@ -149,7 +195,8 @@
                                 </div>
                                 <div class="portfolio-desc">
                                     <h3>Outlander</h3>
-                                    <span>Carro recuperado de enchente, foi realizado serviço elétrico, limpeza do sistema de ar, higienização interna e limpeza do motor</span>
+                                    <span>Carro recuperado de enchente, foi realizado serviço elétrico, limpeza do sistema de ar,
+                                        higienização interna e limpeza do motor</span>
                                 </div>
                             </article>
 
@@ -162,7 +209,8 @@
                                 </div>
                                 <div class="portfolio-desc">
                                     <h3>Outlander</h3>
-                                    <span>Carro recuperado de enchente, foi realizado serviço elétrico, limpeza do sistema de ar, higienização interna e limpeza do motor</span>
+                                    <span>Carro recuperado de enchente, foi realizado serviço elétrico, limpeza do sistema de ar,
+                                        higienização interna e limpeza do motor</span>
                                 </div>
                             </article>
 
@@ -175,7 +223,8 @@
                                 </div>
                                 <div class="portfolio-desc">
                                     <h3>Outlander</h3>
-                                    <span>Carro recuperado de enchente, foi realizado serviço elétrico, limpeza do sistema de ar, higienização interna e limpeza do motor</span>
+                                    <span>Carro recuperado de enchente, foi realizado serviço elétrico, limpeza do sistema de ar,
+                                        higienização interna e limpeza do motor</span>
                                 </div>
                             </article>
 
@@ -188,7 +237,8 @@
                                 </div>
                                 <div class="portfolio-desc">
                                     <h3>Outlander</h3>
-                                    <span>Carro recuperado de enchente, foi realizado serviço elétrico, limpeza do sistema de ar, higienização interna e limpeza do motor</span>
+                                    <span>Carro recuperado de enchente, foi realizado serviço elétrico, limpeza do sistema de ar,
+                                        higienização interna e limpeza do motor</span>
                                 </div>
                             </article>
 
@@ -201,7 +251,8 @@
                                 </div>
                                 <div class="portfolio-desc">
                                     <h3>Outlander</h3>
-                                    <span>Carro recuperado de enchente, foi realizado serviço elétrico, limpeza do sistema de ar, higienização interna e limpeza do motor</span>
+                                    <span>Carro recuperado de enchente, foi realizado serviço elétrico, limpeza do sistema de ar,
+                                        higienização interna e limpeza do motor</span>
                                 </div>
                             </article>
 
@@ -672,7 +723,7 @@
                         <div class="clear "></div>
                         <p style="margin-top: 10px; ">Como somos uma empresa nova, ainda não possuímos integração com o DETRAN dos estados e por isso não
                             podemos fazer tudo de forma automática. Porém, fique tranquilo! Estamos desenvolvendo novas soluções
-                            que em breve deixarão mais fácil.
+                            que em breve deixaremos tudo mais fácil.
                         </p>
                         <p style="margin-bottom: 20px; color: white">Copyright © 2018 JKAPP</p>
                     </div>
