--- a/public/index.html
+++ b/public/index.html
@@ -75,13 +75,50 @@
 	============================================= -->
 	<div id="wrapper" class="clearfix">
 
+<!-- Header
+		============================================= -->
+<header id="header" class="static-sticky full-header clearfix">
+
+    <div id="header-wrap" style="color: #1CAD9C">
+
+        <div class="container-fluid clearfix">
+            
+            <!-- Logo
+						============================================= -->
+            <div id="logo">
+                <a href="index.html" class="standard-logo">
+                    <img src="demos/car/images/logo_parcelepague2.png" alt="RazeCar">
+                </a>
+                <a href="index.html" class="retina-logo">
+                    <img src="demos/car/images/logo_parcelepague4.jpg" alt="RazeCar">
+                </a>
+            </div>
+            <!-- #logo end -->
+        </div>
+
+    </div>
+
+</header>
+<!-- #header end -->
+
 		<!-- Slider
 		============================================= -->
-		<section id="slider" class="swiper_wrapper full-screen clearfix" data-dots="true" data-loop="true" data-grab="false">
+		<section id="slider" class="slider-element swiper_wrapper full-screen force-full-screen clearfix" data-dots="true" data-loop="true" data-grab="false" style="height: 317px;">
 
-			<div class="swiper-container swiper-parent">
+			<div class="swiper-container swiper-parent swiper-container-horizontal swiper-container-android">
 				<div class="swiper-wrapper">
-					<div class="swiper-slide dark" style="background-image: url('demos/car/images/logo_parcelepague2.jpg'); background-size: cover">
+					<div class="swiper-slide dark swiper-slide-active" style="background-image: url('demos/car/images/capa2.jpg'); background-size: cover; height: 317px; width: 345px;"
+					 data-swiper-slide-index="2">
+						<div class="container clearfix">
+							<div class="slider-caption slider-caption-center" style="top: 92.5px;">
+								<h2 class="font-primary nott" style="color:white;font-style: oblique;text-shadow: 0.1em 0.1em 0.2em black ">"Um jeito fácil de pagar os débitos do seu veículo."</h2>
+							</div>
+						</div>
+					</div>
+					<div class="swiper-pagination swiper-pagination-clickable swiper-pagination-bullets">
+						<span class="swiper-pagination-bullet" tabindex="0" role="button" aria-label="Go to slide 1"></span>
+						<span class="swiper-pagination-bullet" tabindex="0" role="button" aria-label="Go to slide 2"></span>
+						<span class="swiper-pagination-bullet swiper-pagination-bullet-active" tabindex="0" role="button" aria-label="Go to slide 3"></span>
 					</div>
 				</div>
 			</div>
@@ -110,8 +147,8 @@
 										<br>Somos</h3>
 								</div>
 								<p>A Parcele Pague é uma plataforma 100% online que permite o pagamento de qualquer débito do seu veiculo (IPVA, Multas,
-									Licenciamentos e Seguros), utilizando cartões de crédito em até 12 vezes.</p>
-
+									Licenciamentos e Seguros), utilizando cartões de crédito em até 12 vezes.
+								</p>
 							</div>
 						</div>
 					</div>
@@ -132,9 +169,8 @@
 								</div>
 								<p>Ao recebermos os dados, realizamos uma busca no DETRAN do estado selecionado e em seguida, enviamos detalhadamente
 									os débitos e as formas de parcelamento por email ou WhatApp. Após selecionar a melhor opção, insira os dados para
-									pagamento e aguarde a confirmação. Ao recebermos os dados, realizamos uma busca no DETRAN do estado selecionado
-									e em seguida, enviamos detalhadamente os débitos e as formas de parcelamento por email ou WhatApp. Após selecionar
-									a melhor opção, insira os dados para pagamento e aguarde a confirmação. </p>
+									pagamento e aguarde a confirmação.
+								</p>
 							</div>
 						</div>
 						<!-- Half Section 2 -->
@@ -146,13 +182,8 @@
 									<h3 style="color:white">Pagamento online</h3>
 								</div>
 								<p style="color:white">
-									Assim que o pagamento for confirmado, </br>
-									lhe enviaremos um email com os </br>
-									comprovantes de pagamento. </br>
-									Não se preocupe, o processo não </br>
-									demora mais que 24hrs.</br>
-									Nossa plataforma é 100% transparente</br>
-									e segura. Se houver alguma dúvida.
+									Assim que o pagamento for confirmado, lhe enviaremos um email com os comprovantes de pagamento. Não se preocupe, o processo
+									não demora mais que 24hrs. Nossa plataforma é 100% transparente e segura.
 								</p>
 							</div>
 						</div>
@@ -181,7 +212,6 @@
 										<div class="col_one_third col_last">
 											<label for="template-contactform-service">Estado</label>
 											<select id="template-contactform-service" name="template-contactform-service" class="sm-form-control custom-select border-form-control">
-												<option value=""></option>
 												<option value="goias">Goias</option>
 												<option value="distritoFederal">Distrito Federal</option>
 											</select>
@@ -223,8 +253,8 @@
 								<div class="card mt-4">
 									<img class="card-img-top" src="demos/car/images/call.jpg" alt="Card image cap">
 									<div class="card-body">
-										<h4 style="color: #1CAD9C">Contato:</h4>
-										<h2 class="card-title mb-2">
+										<h4>Se houver alguma dúvida, entre em contato:</h4>
+										<h2 class="card-title mb-2" style="color: #1CAD9C">
 											<i class="icon-phone-sign position-relative mr-1 color" style="top: 4px;"></i> Ligue ou WhatsApp (61) 98651-8376</h2>
 										<p class="card-text">No momento só realizamos serviços nas regiões do Goias e Distrito Federal.</p>
 									</div>
@@ -260,7 +290,7 @@
                         <div class="clear "></div>
                         <p style="margin-top: 10px; ">Como somos uma empresa nova, ainda não possuímos integração com o DETRAN dos estados e por isso não
                             podemos fazer tudo de forma automática. Porém, fique tranquilo! Estamos desenvolvendo novas soluções
-                            que em breve deixarão mais fácil.
+                            que em breve deixaremos tudo mais fácil.
                         </p>
                         <p style="margin-bottom: 20px; color: white">Copyright © 2018 JKAPP</p>
                     </div>
