--- a/public/servicos-produtos.html
+++ b/public/servicos-produtos.html
@@ -73,6 +73,32 @@
 
     <div id="wrapper" class="clearfix">
 
+<!-- Header
+		============================================= -->
+<header id="header" class="static-sticky full-header clearfix">
+
+    <div id="header-wrap" style="color: #1CAD9C">
+
+        <div class="container-fluid clearfix">
+            
+            <!-- Logo
+						============================================= -->
+            <div id="logo">
+                <a href="index.html" class="standard-logo">
+                    <img src="demos/car/images/logo_parcelepague2.png" alt="RazeCar">
+                </a>
+                <a href="index.html" class="retina-logo">
+                    <img src="demos/car/images/logo_parcelepague4.jpg" alt="RazeCar">
+                </a>
+            </div>
+            <!-- #logo end -->
+        </div>
+
+    </div>
+
+</header>
+<!-- #header end -->
+
         <section id="content" class="clearfix">
 
             <div class="content-wrap nobottompadding" style="padding-top: 1px">
@@ -84,14 +110,17 @@
                         <div class="row clearfix ">
                             <div class="col-md-6 col-sm-9 ">
                                 <div class="heading-block ">
-                                    <h3 style="font-size: 58px; line-height: 56px; letter-spacing: -2px ">Serviços e<br>Produtos</h3>
+                                    <h3 style="font-size: 58px; line-height: 56px; letter-spacing: -2px ">Serviços e
+                                        <br>Produtos</h3>
                                 </div>
 
                                 <div class="row topmargin clearfix ">
                                     <div class="col-sm-6 ">
                                         <div class="feature-box fbox-plain media-box ">
                                             <div class="fbox-icon " style="position: relative; ">
-                                                <a href="# "><i class="icon-car-crane"></i></a>
+                                                <a href="# ">
+                                                    <i class="icon-car-crane"></i>
+                                                </a>
                                             </div>
                                             <div class="fbox-desc " style="margin-top: 25px ">
                                                 <h3>Serviços em geral:</h3>
@@ -113,7 +142,9 @@
                                     <div class="col-sm-6 ">
                                         <div class="feature-box fbox-plain media-box ">
                                             <div class="fbox-icon " style="position: relative; ">
-                                                <a href="# "><i class="icon-car-service2 "></i></a>
+                                                <a href="# ">
+                                                    <i class="icon-car-service2 "></i>
+                                                </a>
                                             </div>
                                             <div class="fbox-desc " style="margin-top: 25px ">
                                                 <h3>Promoções:</h3>
@@ -186,7 +217,7 @@
                         <div class="clear "></div>
                         <p style="margin-top: 10px; ">Como somos uma empresa nova, ainda não possuímos integração com o DETRAN dos estados e por isso não
                             podemos fazer tudo de forma automática. Porém, fique tranquilo! Estamos desenvolvendo novas soluções
-                            que em breve deixarão mais fácil.
+                            que em breve deixaremos tudo mais fácil.
                         </p>
                         <p style="margin-bottom: 20px; color: white">Copyright © 2018 JKAPP</p>
                     </div>
