--- a/source/geral/header.html
+++ b/source/geral/header.html
@@ -5,26 +5,20 @@
     <div id="header-wrap" style="color: #1CAD9C">
 
         <div class="container-fluid clearfix">
-
-            <div id="primary-menu-trigger">
-                <i class="icon-reorder"></i>
+            
+            <!-- Logo
+						============================================= -->
+            <div id="logo">
+                <a href="index.html" class="standard-logo">
+                    <img src="demos/car/images/logo_parcelepague2.png" alt="RazeCar">
+                </a>
+                <a href="index.html" class="retina-logo">
+                    <img src="demos/car/images/logo_parcelepague4.jpg" alt="RazeCar">
+                </a>
             </div>
-
-            <!-- Primary Navigation
-                                ============================================= -->
-            <nav id="primary-menu" class="with-arrows clearfix">
-                <div>
-                    <strong style="text-align: center">Um jeito fácil de pagar os débitos do seu veículo</strong>
-                </div>
-            </nav>
-            <!-- #primary-menu end -->
+            <!-- #logo end -->
         </div>
 
-    </div>
-
-    <div id="header-trigger">
-        <i class="icon-line-menu"></i>
-        <i class="icon-line-cross"></i>
     </div>
 
 </header>
