--- a/source/pages/atendimentos-prestados.html
+++ b/source/pages/atendimentos-prestados.html
@@ -12,6 +12,9 @@
 
     <div id="wrapper" class="clearfix">
 
+        <!-- build:section geral.header -->
+        <!-- /build -->
+
         <section id="content" class="clearfix">
 
             <div class="content-wrap nobottompadding" style="padding-top: 1px">
@@ -24,11 +27,28 @@
                         <!-- Portfolio Filter
 						============================================= -->
                         <ul class="portfolio-filter style-2 clearfix" data-container="#portfolio">
-                            <li><a href="#" data-filter=".cf-hatchback"><i class="icon-car-cuv"></i><span>Hatch</span></a></li>
-                            <li><a href="#" data-filter=".cf-sedan"><i class="icon-car-sedan"></i><span>Sedan</span></a></li>
-                            <li><a href="#" data-filter=".cf-cuv"><i class="icon-car-hatchback"></i><span>SUV</span></a></li>
+                            <li>
+                                <a href="#" data-filter=".cf-hatchback">
+                                    <i class="icon-car-cuv"></i>
+                                    <span>Hatch</span>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#" data-filter=".cf-sedan">
+                                    <i class="icon-car-sedan"></i>
+                                    <span>Sedan</span>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#" data-filter=".cf-cuv">
+                                    <i class="icon-car-hatchback"></i>
+                                    <span>SUV</span>
+                                </a>
+                            </li>
                             <!-- Show All Button -->
-                            <li class="fright activeFilter"><a class="button button-small button-rounded button-reset" href="#" data-filter="*">Mostrar todos</a></li>
+                            <li class="fright activeFilter">
+                                <a class="button button-small button-rounded button-reset" href="#" data-filter="*">Mostrar todos</a>
+                            </li>
                         </ul>
                         <!-- #portfolio-filter end -->
 
@@ -49,7 +69,8 @@
                                 </div>
                                 <div class="portfolio-desc">
                                     <h3>Outlander</h3>
-                                    <span>Carro recuperado de enchente, foi realizado serviço elétrico, limpeza do sistema de ar, higienização interna e limpeza do motor</span>
+                                    <span>Carro recuperado de enchente, foi realizado serviço elétrico, limpeza do sistema de ar,
+                                        higienização interna e limpeza do motor</span>
                                 </div>
                             </article>
 
@@ -62,7 +83,8 @@
                                 </div>
                                 <div class="portfolio-desc">
                                     <h3>Outlander</h3>
-                                    <span>Carro recuperado de enchente, foi realizado serviço elétrico, limpeza do sistema de ar, higienização interna e limpeza do motor</span>
+                                    <span>Carro recuperado de enchente, foi realizado serviço elétrico, limpeza do sistema de ar,
+                                        higienização interna e limpeza do motor</span>
                                 </div>
                             </article>
 
@@ -75,7 +97,8 @@
                                 </div>
                                 <div class="portfolio-desc">
                                     <h3>Outlander</h3>
-                                    <span>Carro recuperado de enchente, foi realizado serviço elétrico, limpeza do sistema de ar, higienização interna e limpeza do motor</span>
+                                    <span>Carro recuperado de enchente, foi realizado serviço elétrico, limpeza do sistema de ar,
+                                        higienização interna e limpeza do motor</span>
                                 </div>
                             </article>
 
@@ -88,7 +111,8 @@
                                 </div>
                                 <div class="portfolio-desc">
                                     <h3>Outlander</h3>
-                                    <span>Carro recuperado de enchente, foi realizado serviço elétrico, limpeza do sistema de ar, higienização interna e limpeza do motor</span>
+                                    <span>Carro recuperado de enchente, foi realizado serviço elétrico, limpeza do sistema de ar,
+                                        higienização interna e limpeza do motor</span>
                                 </div>
                             </article>
 
@@ -101,7 +125,8 @@
                                 </div>
                                 <div class="portfolio-desc">
                                     <h3>Outlander</h3>
-                                    <span>Carro recuperado de enchente, foi realizado serviço elétrico, limpeza do sistema de ar, higienização interna e limpeza do motor</span>
+                                    <span>Carro recuperado de enchente, foi realizado serviço elétrico, limpeza do sistema de ar,
+                                        higienização interna e limpeza do motor</span>
                                 </div>
                             </article>
 
@@ -114,7 +139,8 @@
                                 </div>
                                 <div class="portfolio-desc">
                                     <h3>Outlander</h3>
-                                    <span>Carro recuperado de enchente, foi realizado serviço elétrico, limpeza do sistema de ar, higienização interna e limpeza do motor</span>
+                                    <span>Carro recuperado de enchente, foi realizado serviço elétrico, limpeza do sistema de ar,
+                                        higienização interna e limpeza do motor</span>
                                 </div>
                             </article>
 
@@ -127,7 +153,8 @@
                                 </div>
                                 <div class="portfolio-desc">
                                     <h3>Outlander</h3>
-                                    <span>Carro recuperado de enchente, foi realizado serviço elétrico, limpeza do sistema de ar, higienização interna e limpeza do motor</span>
+                                    <span>Carro recuperado de enchente, foi realizado serviço elétrico, limpeza do sistema de ar,
+                                        higienização interna e limpeza do motor</span>
                                 </div>
                             </article>
 
@@ -140,7 +167,8 @@
                                 </div>
                                 <div class="portfolio-desc">
                                     <h3>Outlander</h3>
-                                    <span>Carro recuperado de enchente, foi realizado serviço elétrico, limpeza do sistema de ar, higienização interna e limpeza do motor</span>
+                                    <span>Carro recuperado de enchente, foi realizado serviço elétrico, limpeza do sistema de ar,
+                                        higienização interna e limpeza do motor</span>
                                 </div>
                             </article>
 
