--- a/source/pages/servicos-produtos.html
+++ b/source/pages/servicos-produtos.html
@@ -12,6 +12,9 @@
 
     <div id="wrapper" class="clearfix">
 
+        <!-- build:section geral.header -->
+        <!-- /build -->
+
         <section id="content" class="clearfix">
 
             <div class="content-wrap nobottompadding" style="padding-top: 1px">
@@ -23,14 +26,17 @@
                         <div class="row clearfix ">
                             <div class="col-md-6 col-sm-9 ">
                                 <div class="heading-block ">
-                                    <h3 style="font-size: 58px; line-height: 56px; letter-spacing: -2px ">Serviços e<br>Produtos</h3>
+                                    <h3 style="font-size: 58px; line-height: 56px; letter-spacing: -2px ">Serviços e
+                                        <br>Produtos</h3>
                                 </div>
 
                                 <div class="row topmargin clearfix ">
                                     <div class="col-sm-6 ">
                                         <div class="feature-box fbox-plain media-box ">
                                             <div class="fbox-icon " style="position: relative; ">
-                                                <a href="# "><i class="icon-car-crane"></i></a>
+                                                <a href="# ">
+                                                    <i class="icon-car-crane"></i>
+                                                </a>
                                             </div>
                                             <div class="fbox-desc " style="margin-top: 25px ">
                                                 <h3>Serviços em geral:</h3>
@@ -52,7 +58,9 @@
                                     <div class="col-sm-6 ">
                                         <div class="feature-box fbox-plain media-box ">
                                             <div class="fbox-icon " style="position: relative; ">
-                                                <a href="# "><i class="icon-car-service2 "></i></a>
+                                                <a href="# ">
+                                                    <i class="icon-car-service2 "></i>
+                                                </a>
                                             </div>
                                             <div class="fbox-desc " style="margin-top: 25px ">
                                                 <h3>Promoções:</h3>
